syntax = "proto3";

package user;

option go_package = "github.com/qiaojinxia/distributed-service/examples/http-grpc-test/proto/user";

// 用户服务
service UserService {
  // 获取用户信息
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // 列出用户
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  
  // 更新用户
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  
  // 删除用户
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  
  // 健康检查
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// 获取用户请求
message GetUserRequest {
  string user_id = 1;
}

// 获取用户响应
message GetUserResponse {
  User user = 1;
  string message = 2;
}

// 列出用户请求
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string search = 3;
}

// 列出用户响应
message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  string message = 3;
}

// 创建用户请求
message CreateUserRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
}

// 创建用户响应
message CreateUserResponse {
  User user = 1;
  string message = 2;
}

// 更新用户请求
message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}

// 更新用户响应
message UpdateUserResponse {
  User user = 1;
  string message = 2;
}

// 删除用户请求
message DeleteUserRequest {
  string user_id = 1;
}

// 删除用户响应
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// 健康检查请求
message HealthCheckRequest {
  string service = 1;
}

// 健康检查响应
message HealthCheckResponse {
  string status = 1;
  string message = 2;
  int64 timestamp = 3;
}

// 用户信息
message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
} 